src/test/ui/consts/const-eval/const-eval-query-stack.stderr
error: reaching this expression at runtime will panic or abort
  --> $DIR/const-eval-query-stack.rs:19:28
   |
LL |     let x: &'static i32 = &(1 / 0);
   |                           -^^^^^^^
   |                            |
   |                            dividing by zero
   |
   = note: `#[deny(const_err)]` on by default

query stack during panic:
#0 [const_eval_raw] const-evaluating `main::promoted[1]`
#1 [const_eval_validated] const-evaluating + checking `main::promoted[1]`
end of query stack
